test/valid/fc51601-t5/t5.mag
--- Author: fc51601, José Sousa

fun retNum (_) : Unit -> Int = 2

fun main (_) : Unit -> Unit = var y : Unit = var x : Unit = var z : Int = retNum(unit) ; print(y)

