test/invalid-semantics/fc51601_invalid_main_signature/invalid_main_signature.mag
--- Author: fc51601, José Sousa

fun main (_) : Unit -> Int = var x : Int = 1